--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/buaadb?serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:3306/BattleByte?serverTimezone=GMT%2b8
     username: root
     password: mysql
+  jpa:
+    hibernate:
+      ddl-auto: update #自动更新
+    show-sql: true  #日志中显示sql语句
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
