--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
-  port: 10090
+  port: 9090
 
 spring:
+  application:
+    name=BattleByte
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/BattleByte?serverTimezone=GMT%2b8
