--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,22 @@
 server:
-  port: 10090
+  port: 9090
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/BattleByte?serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:3306/battlebyte?serverTimezone=GMT%2b8
     username: root
-    password: mysql
+    password: Ab123456789
   jpa:
     hibernate:
-      ddl-auto: update #自动更新
-    show-sql: true  #日志中显示sql语句
+      ddl-auto: update
+    show-sql: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+#mybatis-plus:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
