--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,10 @@ spring:
     url: jdbc:mysql://localhost:3306/battlebyte?serverTimezone=GMT%2b8
     username: root
     password: Ab123456789
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
