--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,11 @@
 			<version>2.0.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-config</artifactId>
-			<version>2.0.0</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.shiro</groupId>-->
+<!--			<artifactId>shiro-config</artifactId>-->
+<!--			<version>2.0.0</version>-->
+<!--		</dependency>-->
 
 
 		<dependency>
@@ -86,6 +86,9 @@
 	</dependencies>
 
 	<build>
+		<finalName>
+			BattleByte
+		</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
