--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build project
         run: |
-          ./mvnw clean package -DskipTests
+          mvn clean package -DskipTests
 
       - name: Sync to server
         uses: appleboy/scp-action@master
