--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,6 @@
 			<version>2.0.0</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.apache.shiro</groupId>-->
-<!--			<artifactId>shiro-config</artifactId>-->
-<!--			<version>2.0.0</version>-->
-<!--		</dependency>-->
-
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -82,7 +75,10 @@
 			<artifactId>spring-web</artifactId>
 			<version>6.1.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
