--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,16 +9,12 @@ spring:
     url: jdbc:mysql://81.70.241.166:3306/battlebyte?serverTimezone=GMT%2b8
     username: root
     password: helloworld
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-#mybatis-plus:
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
