--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,13 @@
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
+			<version>3.10.3</version>
 		</dependency>
-
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<build>
