--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,18 +23,29 @@ jobs:
       - name: Build project
         run: |
           mvn clean package -DskipTests
+    
+      - name: Check Hash
+        run: |
+          ls target
+          md5sum target/BattleByte.jar
 
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          # 同上述
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          port: ${{ secrets.SERVER_PORT }}
-          # ssh进入系统后执行什么样的操作。一般是关闭原有的服务在重启
-          script: |
-            cd /home/ubuntu/BattleByte-backend
-            ps -ef | grep BattleByte.jar | grep -v grep | awk '{print $2}' | xargs kill -9
-            nohup java -jar BattleByte.jar > runtime.log 2>&1 &
-            pwd
+      - name: Stop server
+        env:
+          PASSWORD: ${{secrets.PASSWORD}}
+          USERNAME: ${{secrets.USERNAME}}
+          HOST: ${{secrets.HOST}}
+        run: sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "cd /home/ubuntu/BattleByte-backend && ps -ef | grep BattleByte.jar | grep -v grep | awk '{print $2}' | xargs kill -9"
+
+      - name: Upload
+        env:
+          PASSWORD: ${{secrets.PASSWORD}}
+          USERNAME: ${{secrets.USERNAME}}
+          HOST: ${{secrets.HOST}}
+        run: sshpass -p $PASSWORD scp -r -o StrictHostKeyChecking=no ./target/BattleByte.jar $USERNAME@$HOST:/home/ubuntu/BattleByte-backend
+
+      - name: Restart server
+        env:
+          PASSWORD: ${{secrets.PASSWORD}}
+          USERNAME: ${{secrets.USERNAME}}
+          HOST: ${{secrets.HOST}}
+        run: sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "cd /home/ubuntu/BattleByte-backend && nohup java -jar BattleByte.jar 1> console.log 2> error.log &"
