[fix] enable stop server step to fail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           md5sum target/BattleByte.jar
 
       - name: Stop server
+        continue-on-error: true
         env:
           PASSWORD: ${{secrets.PASSWORD}}
           USERNAME: ${{secrets.USERNAME}}
