--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.race</groupId>
+			<artifactId>entities</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
