--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.83</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
