[fix](CI/CD): new package command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build project
         run: |
-          mvn clean package -DskipTests
+          mvn -Dmaven.test.skip package -Dskip.it=true spring-boot:repackage -f pom.xml
     
       - name: Check Hash
         run: |
