--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.7</version>
-        </dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.7</version>
+		</dependency>
 <!--        jacoco依赖-->
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
@@ -157,36 +157,85 @@
         BattleByte
     </finalName>
     <plugins>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <configuration>
-                <excludes>
-                    <exclude>
-                        <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok</artifactId>
-                    </exclude>
-                </excludes>
-            </configuration>
-        </plugin>
 		<plugin>
-		<groupId>org.jacoco</groupId>
-		<artifactId>jacoco-maven-plugin</artifactId>
-		<version>0.8.7</version>
-		<executions>
-			<execution>
-				<goals>
-					<goal>prepare-agent</goal>
-				</goals>
-			</execution>
-			<execution>
-				<id>report</id>
-				<phase>prepare-package</phase>
-				<goals>
-					<goal>report</goal>
-				</goals>
-			</execution>
-		</executions>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<source>11</source>
+				<target>11</target>
+				<encoding>UTF8</encoding>
+			</configuration>
+			<version>3.8.1</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.22.2</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-failsafe-plugin</artifactId>
+			<version>2.22.2</version>
+		</plugin>
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.7</version>
+			<executions>
+				<execution>
+					<id>prepare-agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>report</id>
+					<phase>test</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+					<configuration>
+						<!--定义输出的文件夹-->
+						<outputDirectory>target/jacoco-report</outputDirectory>
+						<!--执行数据的文件-->
+						<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+						<!--要从报告中排除的类文件列表，支持通配符(*和?)。如果未指定则不会排除任何内容-->
+						<excludes>**/test/*.class</excludes>
+						<!--包含生成报告的文件列表，支持通配符(*和?)。如果未指定则包含所有内容-->
+						<includes></includes>
+						<!--HTML 报告页面中使用的页脚文本。-->
+						<footer></footer>
+						<!--生成报告的文件类型，HTML(默认)、XML、CSV-->
+						<formats>HTML</formats>
+						<!--生成报告的编码格式，默认UTF-8-->
+						<outputEncoding>UTF-8</outputEncoding>
+						<!--抑制执行的标签-->
+						<skip></skip>
+						<!--源文件编码-->
+						<sourceEncoding>UTF-8</sourceEncoding>
+						<!--HTML报告的标题-->
+						<title>${project.name}</title>
+					</configuration>
+				</execution>
+				<execution>
+					<id>jacoco-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+							<rule>
+								<element>PACKAGE</element>
+								<limits>
+									<limit>
+										<counter>LINE</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.9</minimum>
+									</limit>
+								</limits>
+							</rule>
+						</rules>
+					</configuration>
+				</execution>
+			</executions>
 		</plugin>
     </plugins>
 </build>
