[fix]: 修复邮件无法发送的问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,13 @@ spring:
     port: 587
     username: BattleByteTeam@outlook.com
     password: HelloWorld233
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
 
 
 mybatis:
