--- a/pom.xml
+++ b/pom.xml
@@ -171,11 +171,6 @@
 			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -210,6 +205,16 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.battlebyte.battlebyte.BattleByteApplication</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+			</plugin>
+
 
 		</plugins>
 	</build>
