--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '21'
+          java-version: '22'
           distribution: 'adopt'
 
       - name: Build project
@@ -47,14 +47,6 @@ jobs:
         with:
           name: battlebyte-backend
 
-      - name: Stop server
-        continue-on-error: true
-        env:
-          PASSWORD: ${{secrets.PASSWORD}}
-          USERNAME: ${{secrets.USERNAME}}
-          HOST: ${{secrets.HOST}}
-        run: sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "screen -X -S backend quit"
-
       - name: Clear server
         continue-on-error: true
         env:
@@ -75,4 +67,4 @@ jobs:
           PASSWORD: ${{secrets.PASSWORD}}
           USERNAME: ${{secrets.USERNAME}}
           HOST: ${{secrets.HOST}}
-        run: sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "cd /home/ubuntu/BattleByte-backend && screen -dmS backend sh -c 'java -jar BattleByte.jar'"
+        run: sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "sh ~/restart.sh"
